Se agregó la tanda de penales, se arreglaron las faltas fantasmas, y se puede pausar el partido para cambiar las tacticas durante el juego.